// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatchExpression 1`] = `
{
  "@": {
    "end": {
      "column": 33,
      "line": 1,
      "offset": 32,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "block": {
    "@": {
      "end": {
        "column": 33,
        "line": 1,
        "offset": 32,
      },
      "start": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
    },
    "caseEntries": [
      {
        "@": {
          "end": {
            "column": 31,
            "line": 1,
            "offset": 30,
          },
          "start": {
            "column": 16,
            "line": 1,
            "offset": 15,
          },
        },
        "block": {
          "@": {
            "end": {
              "column": 31,
              "line": 1,
              "offset": 30,
            },
            "start": {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
          },
          "kind": "Block",
          "statements": [],
        },
        "guard": {
          "@": {
            "end": {
              "column": 27,
              "line": 1,
              "offset": 26,
            },
            "start": {
              "column": 21,
              "line": 1,
              "offset": 20,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 25,
                "line": 1,
                "offset": 24,
              },
              "start": {
                "column": 21,
                "line": 1,
                "offset": 20,
              },
            },
            "kind": "TypeIdentifier",
            "value": "King",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "@": {
              "end": {
                "column": 27,
                "line": 1,
                "offset": 26,
              },
              "start": {
                "column": 25,
                "line": 1,
                "offset": 24,
              },
            },
            "definitions": [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
    ],
    "kind": "BlockOfCases",
  },
  "expression": {
    "@": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "kind": "ValueIdentifier",
    "value": "card",
  },
  "kind": "MatchExpression",
}
`;

exports[`MatchFunction 1`] = `
{
  "@": {
    "end": {
      "column": 43,
      "line": 1,
      "offset": 42,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "block": {
    "@": {
      "end": {
        "column": 43,
        "line": 1,
        "offset": 42,
      },
      "start": {
        "column": 41,
        "line": 1,
        "offset": 40,
      },
    },
    "caseEntries": [],
    "kind": "BlockOfCases",
  },
  "identifier": {
    "@": {
      "end": {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "start": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
    },
    "kind": "ValueIdentifier",
    "value": "printCard",
  },
  "kind": "MatchFunction",
  "matchType": {
    "@": {
      "end": {
        "column": 40,
        "line": 1,
        "offset": 39,
      },
      "start": {
        "column": 28,
        "line": 1,
        "offset": 27,
      },
    },
    "definitions": [
      {
        "@": {
          "end": {
            "column": 39,
            "line": 1,
            "offset": 38,
          },
          "start": {
            "column": 29,
            "line": 1,
            "offset": 28,
          },
        },
        "identifier": {
          "@": {
            "end": {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "start": {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
          },
          "kind": "ValueIdentifier",
          "value": "card",
        },
        "kind": "NamedDefinition",
        "typeTag": {
          "@": {
            "end": {
              "column": 39,
              "line": 1,
              "offset": 38,
            },
            "start": {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
          },
          "kind": "TypeTag",
          "typeExpression": {
            "@": {
              "end": {
                "column": 39,
                "line": 1,
                "offset": 38,
              },
              "start": {
                "column": 35,
                "line": 1,
                "offset": 34,
              },
            },
            "kind": "TypeIdentifier",
            "value": "Card",
          },
        },
      },
    ],
    "kind": "RecordDefinition",
  },
}
`;

exports[`MatchFunction.cases 1`] = `
{
  "@": {
    "end": {
      "column": 60,
      "line": 1,
      "offset": 59,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "block": {
    "@": {
      "end": {
        "column": 60,
        "line": 1,
        "offset": 59,
      },
      "start": {
        "column": 41,
        "line": 1,
        "offset": 40,
      },
    },
    "caseEntries": [
      {
        "@": {
          "end": {
            "column": 58,
            "line": 1,
            "offset": 57,
          },
          "start": {
            "column": 43,
            "line": 1,
            "offset": 42,
          },
        },
        "block": {
          "@": {
            "end": {
              "column": 58,
              "line": 1,
              "offset": 57,
            },
            "start": {
              "column": 56,
              "line": 1,
              "offset": 55,
            },
          },
          "kind": "Block",
          "statements": [],
        },
        "guard": {
          "@": {
            "end": {
              "column": 54,
              "line": 1,
              "offset": 53,
            },
            "start": {
              "column": 48,
              "line": 1,
              "offset": 47,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 52,
                "line": 1,
                "offset": 51,
              },
              "start": {
                "column": 48,
                "line": 1,
                "offset": 47,
              },
            },
            "kind": "TypeIdentifier",
            "value": "King",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "@": {
              "end": {
                "column": 54,
                "line": 1,
                "offset": 53,
              },
              "start": {
                "column": 52,
                "line": 1,
                "offset": 51,
              },
            },
            "definitions": [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
    ],
    "kind": "BlockOfCases",
  },
  "identifier": {
    "@": {
      "end": {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "start": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
    },
    "kind": "ValueIdentifier",
    "value": "printCard",
  },
  "kind": "MatchFunction",
  "matchType": {
    "@": {
      "end": {
        "column": 40,
        "line": 1,
        "offset": 39,
      },
      "start": {
        "column": 28,
        "line": 1,
        "offset": 27,
      },
    },
    "definitions": [
      {
        "@": {
          "end": {
            "column": 39,
            "line": 1,
            "offset": 38,
          },
          "start": {
            "column": 29,
            "line": 1,
            "offset": 28,
          },
        },
        "identifier": {
          "@": {
            "end": {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "start": {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
          },
          "kind": "ValueIdentifier",
          "value": "card",
        },
        "kind": "NamedDefinition",
        "typeTag": {
          "@": {
            "end": {
              "column": 39,
              "line": 1,
              "offset": 38,
            },
            "start": {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
          },
          "kind": "TypeTag",
          "typeExpression": {
            "@": {
              "end": {
                "column": 39,
                "line": 1,
                "offset": 38,
              },
              "start": {
                "column": 35,
                "line": 1,
                "offset": 34,
              },
            },
            "kind": "TypeIdentifier",
            "value": "Card",
          },
        },
      },
    ],
    "kind": "RecordDefinition",
  },
}
`;

exports[`MatchFunction.fullExample 1`] = `
{
  "@": {
    "end": {
      "column": 6,
      "line": 17,
      "offset": 305,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "block": {
    "@": {
      "end": {
        "column": 6,
        "line": 17,
        "offset": 305,
      },
      "start": {
        "column": 41,
        "line": 1,
        "offset": 40,
      },
    },
    "caseEntries": [
      {
        "@": {
          "end": {
            "column": 10,
            "line": 4,
            "offset": 98,
          },
          "start": {
            "column": 9,
            "line": 2,
            "offset": 50,
          },
        },
        "block": {
          "@": {
            "end": {
              "column": 10,
              "line": 4,
              "offset": 98,
            },
            "start": {
              "column": 22,
              "line": 2,
              "offset": 63,
            },
          },
          "kind": "Block",
          "statements": [
            {
              "@": {
                "end": {
                  "column": 9,
                  "line": 4,
                  "offset": 97,
                },
                "start": {
                  "column": 11,
                  "line": 3,
                  "offset": 75,
                },
              },
              "expression": {
                "@": {
                  "end": {
                    "column": 9,
                    "line": 4,
                    "offset": 97,
                  },
                  "start": {
                    "column": 18,
                    "line": 3,
                    "offset": 82,
                  },
                },
                "kind": "StringLiteral",
                "value": "King",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": {
          "@": {
            "end": {
              "column": 20,
              "line": 2,
              "offset": 61,
            },
            "start": {
              "column": 14,
              "line": 2,
              "offset": 55,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 18,
                "line": 2,
                "offset": 59,
              },
              "start": {
                "column": 14,
                "line": 2,
                "offset": 55,
              },
            },
            "kind": "TypeIdentifier",
            "value": "King",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "@": {
              "end": {
                "column": 20,
                "line": 2,
                "offset": 61,
              },
              "start": {
                "column": 18,
                "line": 2,
                "offset": 59,
              },
            },
            "definitions": [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      {
        "@": {
          "end": {
            "column": 10,
            "line": 8,
            "offset": 159,
          },
          "start": {
            "column": 9,
            "line": 6,
            "offset": 109,
          },
        },
        "block": {
          "@": {
            "end": {
              "column": 10,
              "line": 8,
              "offset": 159,
            },
            "start": {
              "column": 23,
              "line": 6,
              "offset": 123,
            },
          },
          "kind": "Block",
          "statements": [
            {
              "@": {
                "end": {
                  "column": 9,
                  "line": 8,
                  "offset": 158,
                },
                "start": {
                  "column": 11,
                  "line": 7,
                  "offset": 135,
                },
              },
              "expression": {
                "@": {
                  "end": {
                    "column": 9,
                    "line": 8,
                    "offset": 158,
                  },
                  "start": {
                    "column": 18,
                    "line": 7,
                    "offset": 142,
                  },
                },
                "kind": "StringLiteral",
                "value": "Queen",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": {
          "@": {
            "end": {
              "column": 21,
              "line": 6,
              "offset": 121,
            },
            "start": {
              "column": 14,
              "line": 6,
              "offset": 114,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 19,
                "line": 6,
                "offset": 119,
              },
              "start": {
                "column": 14,
                "line": 6,
                "offset": 114,
              },
            },
            "kind": "TypeIdentifier",
            "value": "Queen",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "@": {
              "end": {
                "column": 21,
                "line": 6,
                "offset": 121,
              },
              "start": {
                "column": 19,
                "line": 6,
                "offset": 119,
              },
            },
            "definitions": [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      {
        "@": {
          "end": {
            "column": 10,
            "line": 12,
            "offset": 218,
          },
          "start": {
            "column": 9,
            "line": 10,
            "offset": 170,
          },
        },
        "block": {
          "@": {
            "end": {
              "column": 10,
              "line": 12,
              "offset": 218,
            },
            "start": {
              "column": 22,
              "line": 10,
              "offset": 183,
            },
          },
          "kind": "Block",
          "statements": [
            {
              "@": {
                "end": {
                  "column": 9,
                  "line": 12,
                  "offset": 217,
                },
                "start": {
                  "column": 11,
                  "line": 11,
                  "offset": 195,
                },
              },
              "expression": {
                "@": {
                  "end": {
                    "column": 9,
                    "line": 12,
                    "offset": 217,
                  },
                  "start": {
                    "column": 18,
                    "line": 11,
                    "offset": 202,
                  },
                },
                "kind": "StringLiteral",
                "value": "Jack",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": {
          "@": {
            "end": {
              "column": 20,
              "line": 10,
              "offset": 181,
            },
            "start": {
              "column": 14,
              "line": 10,
              "offset": 175,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 18,
                "line": 10,
                "offset": 179,
              },
              "start": {
                "column": 14,
                "line": 10,
                "offset": 175,
              },
            },
            "kind": "TypeIdentifier",
            "value": "Jack",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "@": {
              "end": {
                "column": 20,
                "line": 10,
                "offset": 181,
              },
              "start": {
                "column": 18,
                "line": 10,
                "offset": 179,
              },
            },
            "definitions": [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      {
        "@": {
          "end": {
            "column": 10,
            "line": 16,
            "offset": 298,
          },
          "start": {
            "column": 9,
            "line": 14,
            "offset": 229,
          },
        },
        "block": {
          "@": {
            "end": {
              "column": 10,
              "line": 16,
              "offset": 298,
            },
            "start": {
              "column": 36,
              "line": 14,
              "offset": 256,
            },
          },
          "kind": "Block",
          "statements": [
            {
              "@": {
                "end": {
                  "column": 9,
                  "line": 16,
                  "offset": 297,
                },
                "start": {
                  "column": 11,
                  "line": 15,
                  "offset": 268,
                },
              },
              "expression": {
                "@": {
                  "end": {
                    "column": 9,
                    "line": 16,
                    "offset": 297,
                  },
                  "start": {
                    "column": 18,
                    "line": 15,
                    "offset": 275,
                  },
                },
                "kind": "StringLiteral",
                "value": "Number card",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": {
          "@": {
            "end": {
              "column": 34,
              "line": 14,
              "offset": 254,
            },
            "start": {
              "column": 14,
              "line": 14,
              "offset": 234,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 20,
                "line": 14,
                "offset": 240,
              },
              "start": {
                "column": 14,
                "line": 14,
                "offset": 234,
              },
            },
            "kind": "TypeIdentifier",
            "value": "Number",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "@": {
              "end": {
                "column": 34,
                "line": 14,
                "offset": 254,
              },
              "start": {
                "column": 20,
                "line": 14,
                "offset": 240,
              },
            },
            "definitions": [
              {
                "@": {
                  "end": {
                    "column": 33,
                    "line": 14,
                    "offset": 253,
                  },
                  "start": {
                    "column": 21,
                    "line": 14,
                    "offset": 241,
                  },
                },
                "expression": {
                  "@": {
                    "end": {
                      "column": 33,
                      "line": 14,
                      "offset": 253,
                    },
                    "start": {
                      "column": 28,
                      "line": 14,
                      "offset": 248,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "identifier": {
                  "@": {
                    "end": {
                      "column": 26,
                      "line": 14,
                      "offset": 246,
                    },
                    "start": {
                      "column": 21,
                      "line": 14,
                      "offset": 241,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "kind": "NamedLiteral",
              },
            ],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
    ],
    "kind": "BlockOfCases",
  },
  "identifier": {
    "@": {
      "end": {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "start": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
    },
    "kind": "ValueIdentifier",
    "value": "printCard",
  },
  "kind": "MatchFunction",
  "matchType": {
    "@": {
      "end": {
        "column": 40,
        "line": 1,
        "offset": 39,
      },
      "start": {
        "column": 28,
        "line": 1,
        "offset": 27,
      },
    },
    "definitions": [
      {
        "@": {
          "end": {
            "column": 39,
            "line": 1,
            "offset": 38,
          },
          "start": {
            "column": 29,
            "line": 1,
            "offset": 28,
          },
        },
        "identifier": {
          "@": {
            "end": {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "start": {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
          },
          "kind": "ValueIdentifier",
          "value": "card",
        },
        "kind": "NamedDefinition",
        "typeTag": {
          "@": {
            "end": {
              "column": 39,
              "line": 1,
              "offset": 38,
            },
            "start": {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
          },
          "kind": "TypeTag",
          "typeExpression": {
            "@": {
              "end": {
                "column": 39,
                "line": 1,
                "offset": 38,
              },
              "start": {
                "column": 35,
                "line": 1,
                "offset": 34,
              },
            },
            "kind": "TypeIdentifier",
            "value": "Card",
          },
        },
      },
    ],
    "kind": "RecordDefinition",
  },
}
`;

exports[`MatchFunction.fullExample 2`] = `
{
  "@": {
    "end": {
      "column": 6,
      "line": 17,
      "offset": 278,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "block": {
    "@": {
      "end": {
        "column": 6,
        "line": 17,
        "offset": 278,
      },
      "start": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
    },
    "caseEntries": [
      {
        "@": {
          "end": {
            "column": 10,
            "line": 4,
            "offset": 71,
          },
          "start": {
            "column": 9,
            "line": 2,
            "offset": 23,
          },
        },
        "block": {
          "@": {
            "end": {
              "column": 10,
              "line": 4,
              "offset": 71,
            },
            "start": {
              "column": 22,
              "line": 2,
              "offset": 36,
            },
          },
          "kind": "Block",
          "statements": [
            {
              "@": {
                "end": {
                  "column": 9,
                  "line": 4,
                  "offset": 70,
                },
                "start": {
                  "column": 11,
                  "line": 3,
                  "offset": 48,
                },
              },
              "expression": {
                "@": {
                  "end": {
                    "column": 9,
                    "line": 4,
                    "offset": 70,
                  },
                  "start": {
                    "column": 18,
                    "line": 3,
                    "offset": 55,
                  },
                },
                "kind": "StringLiteral",
                "value": "King",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": {
          "@": {
            "end": {
              "column": 20,
              "line": 2,
              "offset": 34,
            },
            "start": {
              "column": 14,
              "line": 2,
              "offset": 28,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 18,
                "line": 2,
                "offset": 32,
              },
              "start": {
                "column": 14,
                "line": 2,
                "offset": 28,
              },
            },
            "kind": "TypeIdentifier",
            "value": "King",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "@": {
              "end": {
                "column": 20,
                "line": 2,
                "offset": 34,
              },
              "start": {
                "column": 18,
                "line": 2,
                "offset": 32,
              },
            },
            "definitions": [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      {
        "@": {
          "end": {
            "column": 10,
            "line": 8,
            "offset": 132,
          },
          "start": {
            "column": 9,
            "line": 6,
            "offset": 82,
          },
        },
        "block": {
          "@": {
            "end": {
              "column": 10,
              "line": 8,
              "offset": 132,
            },
            "start": {
              "column": 23,
              "line": 6,
              "offset": 96,
            },
          },
          "kind": "Block",
          "statements": [
            {
              "@": {
                "end": {
                  "column": 9,
                  "line": 8,
                  "offset": 131,
                },
                "start": {
                  "column": 11,
                  "line": 7,
                  "offset": 108,
                },
              },
              "expression": {
                "@": {
                  "end": {
                    "column": 9,
                    "line": 8,
                    "offset": 131,
                  },
                  "start": {
                    "column": 18,
                    "line": 7,
                    "offset": 115,
                  },
                },
                "kind": "StringLiteral",
                "value": "Queen",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": {
          "@": {
            "end": {
              "column": 21,
              "line": 6,
              "offset": 94,
            },
            "start": {
              "column": 14,
              "line": 6,
              "offset": 87,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 19,
                "line": 6,
                "offset": 92,
              },
              "start": {
                "column": 14,
                "line": 6,
                "offset": 87,
              },
            },
            "kind": "TypeIdentifier",
            "value": "Queen",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "@": {
              "end": {
                "column": 21,
                "line": 6,
                "offset": 94,
              },
              "start": {
                "column": 19,
                "line": 6,
                "offset": 92,
              },
            },
            "definitions": [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      {
        "@": {
          "end": {
            "column": 10,
            "line": 12,
            "offset": 191,
          },
          "start": {
            "column": 9,
            "line": 10,
            "offset": 143,
          },
        },
        "block": {
          "@": {
            "end": {
              "column": 10,
              "line": 12,
              "offset": 191,
            },
            "start": {
              "column": 22,
              "line": 10,
              "offset": 156,
            },
          },
          "kind": "Block",
          "statements": [
            {
              "@": {
                "end": {
                  "column": 9,
                  "line": 12,
                  "offset": 190,
                },
                "start": {
                  "column": 11,
                  "line": 11,
                  "offset": 168,
                },
              },
              "expression": {
                "@": {
                  "end": {
                    "column": 9,
                    "line": 12,
                    "offset": 190,
                  },
                  "start": {
                    "column": 18,
                    "line": 11,
                    "offset": 175,
                  },
                },
                "kind": "StringLiteral",
                "value": "Jack",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": {
          "@": {
            "end": {
              "column": 20,
              "line": 10,
              "offset": 154,
            },
            "start": {
              "column": 14,
              "line": 10,
              "offset": 148,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 18,
                "line": 10,
                "offset": 152,
              },
              "start": {
                "column": 14,
                "line": 10,
                "offset": 148,
              },
            },
            "kind": "TypeIdentifier",
            "value": "Jack",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "@": {
              "end": {
                "column": 20,
                "line": 10,
                "offset": 154,
              },
              "start": {
                "column": 18,
                "line": 10,
                "offset": 152,
              },
            },
            "definitions": [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      {
        "@": {
          "end": {
            "column": 10,
            "line": 16,
            "offset": 271,
          },
          "start": {
            "column": 9,
            "line": 14,
            "offset": 202,
          },
        },
        "block": {
          "@": {
            "end": {
              "column": 10,
              "line": 16,
              "offset": 271,
            },
            "start": {
              "column": 36,
              "line": 14,
              "offset": 229,
            },
          },
          "kind": "Block",
          "statements": [
            {
              "@": {
                "end": {
                  "column": 9,
                  "line": 16,
                  "offset": 270,
                },
                "start": {
                  "column": 11,
                  "line": 15,
                  "offset": 241,
                },
              },
              "expression": {
                "@": {
                  "end": {
                    "column": 9,
                    "line": 16,
                    "offset": 270,
                  },
                  "start": {
                    "column": 18,
                    "line": 15,
                    "offset": 248,
                  },
                },
                "kind": "StringLiteral",
                "value": "Number card",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": {
          "@": {
            "end": {
              "column": 34,
              "line": 14,
              "offset": 227,
            },
            "start": {
              "column": 14,
              "line": 14,
              "offset": 207,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 20,
                "line": 14,
                "offset": 213,
              },
              "start": {
                "column": 14,
                "line": 14,
                "offset": 207,
              },
            },
            "kind": "TypeIdentifier",
            "value": "Number",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "@": {
              "end": {
                "column": 34,
                "line": 14,
                "offset": 227,
              },
              "start": {
                "column": 20,
                "line": 14,
                "offset": 213,
              },
            },
            "definitions": [
              {
                "@": {
                  "end": {
                    "column": 33,
                    "line": 14,
                    "offset": 226,
                  },
                  "start": {
                    "column": 21,
                    "line": 14,
                    "offset": 214,
                  },
                },
                "expression": {
                  "@": {
                    "end": {
                      "column": 33,
                      "line": 14,
                      "offset": 226,
                    },
                    "start": {
                      "column": 28,
                      "line": 14,
                      "offset": 221,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "identifier": {
                  "@": {
                    "end": {
                      "column": 26,
                      "line": 14,
                      "offset": 219,
                    },
                    "start": {
                      "column": 21,
                      "line": 14,
                      "offset": 214,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "kind": "NamedLiteral",
              },
            ],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
    ],
    "kind": "BlockOfCases",
  },
  "expression": {
    "@": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "kind": "ValueIdentifier",
    "value": "card",
  },
  "kind": "MatchExpression",
}
`;

exports[`NamedRecordDefinition 1`] = `
{
  "@": {
    "end": {
      "column": 36,
      "line": 1,
      "offset": 35,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "block": {
    "@": {
      "end": {
        "column": 36,
        "line": 1,
        "offset": 35,
      },
      "start": {
        "column": 34,
        "line": 1,
        "offset": 33,
      },
    },
    "kind": "Block",
    "statements": [],
  },
  "guard": {
    "@": {
      "end": {
        "column": 32,
        "line": 1,
        "offset": 31,
      },
      "start": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
    },
    "definitions": [
      {
        "@": {
          "end": {
            "column": 31,
            "line": 1,
            "offset": 30,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "expression": {
          "@": {
            "end": {
              "column": 31,
              "line": 1,
              "offset": 30,
            },
            "start": {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 17,
                "line": 1,
                "offset": 16,
              },
              "start": {
                "column": 13,
                "line": 1,
                "offset": 12,
              },
            },
            "kind": "TypeIdentifier",
            "value": "King",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "@": {
              "end": {
                "column": 31,
                "line": 1,
                "offset": 30,
              },
              "start": {
                "column": 17,
                "line": 1,
                "offset": 16,
              },
            },
            "definitions": [
              {
                "@": {
                  "end": {
                    "column": 30,
                    "line": 1,
                    "offset": 29,
                  },
                  "start": {
                    "column": 18,
                    "line": 1,
                    "offset": 17,
                  },
                },
                "expression": {
                  "@": {
                    "end": {
                      "column": 30,
                      "line": 1,
                      "offset": 29,
                    },
                    "start": {
                      "column": 25,
                      "line": 1,
                      "offset": 24,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "identifier": {
                  "@": {
                    "end": {
                      "column": 23,
                      "line": 1,
                      "offset": 22,
                    },
                    "start": {
                      "column": 18,
                      "line": 1,
                      "offset": 17,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "kind": "NamedLiteral",
              },
            ],
            "kind": "RecordLiteral",
          },
        },
        "identifier": {
          "@": {
            "end": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "kind": "ValueIdentifier",
          "value": "card",
        },
        "kind": "NamedLiteral",
      },
    ],
    "kind": "RecordLiteral",
  },
  "kind": "CaseEntry",
}
`;
